# utteranceVersionOne

./: .env  .env.template  .gitignore  PromptForDialogFlowUtterancetest  README.md  main.py  main_simple.py  manage_outputs.py  pyproject.toml  requirements.txt  run.bat  run_simple.bat
utterance_intention_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
